# tictactoe-cpp

./: .gitignore  CMakeLists.txt  README.md
include/: Board.h  Game.h  Move.h
src/: Board.cpp  Game.cpp  Move.cpp  main.cpp
